Feature: namespace delete api
